# chippy

./: CMakeLists.txt  go.mod  main.go  readme.md
core/: core.go  core_constants.go  core_test.go
gui/: gui.go
